--- a/secciones/contacto/contacto.html
+++ b/secciones/contacto/contacto.html
@@ -13,7 +13,7 @@
       <ul class="tarjeta__footer__lista">
         <li>
           <a
-            href="../../html/laboratorio/laboratorio.html"
+            href="../../lib/laboratorio/css_riverac/laboratorio.html"
             target="_blank"
             class="tarjeta__footer__enlace enlace enlace__efecto__resplandor enlace__subrayado__deslizante holograma"
             >Componente 1</a
@@ -74,7 +74,7 @@
   </section>
 
   <section class="contenedor__flex__columna">
-    <div class="animacion__resplandor sonido-hover">
+    <div class="animacion__resplandor sonido__hover">
       <span>C</span>arlos<span>M</span>ario<span>R</span>ivera.com
     </div>
     <h6 class="texto__atractivo"><span>R</span>edes<span>S</span>ociales</h6>
@@ -109,7 +109,7 @@
 
   <div class="contenedor_letra margen__grande">
     <div class="letra-grande">
-      &copy; 2024 By RiveraDev Todos los derechos reservados.
+      &copy; <span id="year"></span> By RiveraDev Todos los derechos reservados.
     </div>
   </div>
 
