--- a/secciones/habilidades/habilidades.html
+++ b/secciones/habilidades/habilidades.html
@@ -5,8 +5,8 @@
 <link rel="stylesheet" href="./habilidades.css" />
 
 <h2 class="subtitulo"><span>H</span>abilidades</h2>
-<div class="contenedor contenedor__padding">
-  <div class="contenedor__medio contenedor__grid_2">
+<div class="contenedor">
+  <div class="contenedor__grid_2 contenido">
     <!-- Habilidad 1 -->
 
     <div class="habilidades__contenido gradiente__frio contenedor__padding">
