--- a/secciones/bi/Dolar_completo_API/Dolar_completo_API.html
+++ b/secciones/bi/Dolar_completo_API/Dolar_completo_API.html
@@ -8,65 +8,129 @@
     <link rel="stylesheet" href="../bi_estilo.css" />
     <link rel="stylesheet" href="../css/Dolar_completo_API.css" />
     <link rel="stylesheet" href="../../../estilos/estilo.css" />
+
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+
     <style>
       section {
         margin-bottom: 20px;
       }
     </style>
   </head>
-  <body class="contenedor__padding">
-    <section class="contenedor__flex__columna__centrado contenedor__padding">
+  <body
+    class="contenedor__flex__columna__centrado__centrado contenedor__padding"
+  >
+    <!--? tabla-->
+    <section class="contenedor__padding" title="Datos desde API en Tabla">
       <h1>Datos desde API en Tabla</h1>
-      <table
-        id="Dolar_completo_API"
-        class="tabla__contenedor contenedor__padding"
-      >
-        <thead>
-          <tr>
-            <th>Valor</th>
-            <th>Unidad</th>
-            <th>Vigencia Desde</th>
-            <th>Vigencia Hasta</th>
-          </tr>
-        </thead>
-        <tbody>
-          <!-- Los datos se insertarán aquí -->
-        </tbody>
-      </table>
+      <!DOCTYPE html>
+      <html lang="es">
+        <head>
+          <meta charset="UTF-8" />
+          <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0"
+          />
+          <title>Datos desde API en Tabla con Paginación</title>
 
-      <script>
-        const apiUrl =
-          "https://www.datos.gov.co/resource/mcec-87by.json?$query=SELECT%20valor%2C%20unidad%2C%20vigenciadesde%2C%20vigenciahasta%20ORDER%20BY%20vigenciahasta%20DESC";
+          <link
+            rel="stylesheet"
+            href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css"
+          />
+          <link rel="stylesheet" href="../bi_estilo.css" />
+          <link rel="stylesheet" href="../css/Dolar_completo_API.css" />
+          <link rel="stylesheet" href="../../../estilos/estilo.css" />
 
-        fetch(apiUrl)
-          .then((response) => {
-            if (!response.ok) {
-              throw new Error("Error en la red");
+          <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+          <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+
+          <style>
+            section {
+              margin-bottom: 20px;
             }
-            return response.json();
-          })
-          .then((datos) => {
-            const tbody = document.querySelector("#Dolar_completo_API tbody");
+          </style>
+        </head>
+        <body
+          class="contenedor__flex__columna__centrado__centrado contenedor__padding"
+        >
+          <section class="contenedor__padding">
+            <h1>Datos desde API en Tabla con Paginación</h1>
+            <table
+              id="Dolar_completo_API"
+              class="display tabla__contenedor tabla__contenedor__centrada contenedor__padding"
+            >
+              <thead>
+                <tr>
+                  <th>Valor</th>
+                  <th>Unidad</th>
+                  <th>Vigencia Desde</th>
+                  <th>Vigencia Hasta</th>
+                </tr>
+              </thead>
+              <tbody>
+                <!-- Los datos se insertarán aquí -->
+              </tbody>
+            </table>
 
-            datos.forEach((dato) => {
-              const tr = document.createElement("tr");
-              tr.innerHTML = `
-                        <td>${dato.valor}</td>
-                        <td>${dato.unidad}</td>
-                        <td>${new Date(
-                          dato.vigenciadesde
-                        ).toLocaleDateString()}</td>
-                        <td>${new Date(
-                          dato.vigenciahasta
-                        ).toLocaleDateString()}</td>
-                    `;
-              tbody.appendChild(tr);
-            });
-          })
-          .catch((error) => {
-            console.error("Hubo un problema con la solicitud:", error);
-          });
-      </script>
+            <script>
+              const apiUrl =
+                "https://www.datos.gov.co/resource/mcec-87by.json?$query=SELECT%20valor%2C%20unidad%2C%20vigenciadesde%2C%20vigenciahasta%20ORDER%20BY%20vigenciahasta%20DESC";
+
+              fetch(apiUrl)
+                .then((response) => {
+                  if (!response.ok) {
+                    throw new Error("Error en la red");
+                  }
+                  return response.json();
+                })
+                .then((datos) => {
+                  const tbody = document.querySelector(
+                    "#Dolar_completo_API tbody"
+                  );
+
+                  datos.forEach((dato) => {
+                    const tr = document.createElement("tr");
+                    tr.innerHTML = `
+                            <td>${dato.valor}</td>
+                            <td>${dato.unidad}</td>
+                            <td>${new Date(
+                              dato.vigenciadesde
+                            ).toLocaleDateString()}</td>
+                            <td>${new Date(
+                              dato.vigenciahasta
+                            ).toLocaleDateString()}</td>
+                        `;
+                    tbody.appendChild(tr);
+                  });
+
+                  // Inicializa la tabla con DataTables una vez que los datos se han cargado
+                  $("#Dolar_completo_API").DataTable({
+                    pageLength: 10, // Número de filas por página
+                    lengthMenu: [5, 10, 25, 50], // Opciones de número de filas
+                    searching: true, // Habilitar búsqueda
+                    ordering: true, // Habilitar ordenación
+                    order: [[3, "desc"]], // Ordenar por la columna de Vigencia Hasta de manera descendente
+                  });
+                })
+                .catch((error) => {
+                  console.error("Hubo un problema con la solicitud:", error);
+                });
+            </script>
+          </section>
+          <footer>
+            <p>
+              Crédito:
+              <a
+                href="https://www.datos.gov.co/"
+                class="enlace enlace__efecto__3d enlace__subrayado__deslizante"
+                target="_blank"
+                >datos.gov.co</a
+              >, recursos abiertos del Gobierno de Colombia.
+            </p>
+          </footer>
+        </body>
+      </html>
 
       <p>
         Los datos presentados en la tabla anterior, se obtienen de
@@ -78,60 +142,50 @@
         >.
       </p>
     </section>
-    <section>
-      <h2 class="subtitulo">ETL y Machine Learning</h2>
-      <h3>¿Qué es ETL?</h3>
-      <p>
-        En mi trabajo con datos, utilizo un proceso llamado ETL, que significa
-        <strong>Extracción</strong>, <strong>Transformación</strong> y
-        <strong>Carga</strong>. Este proceso es fundamental para integrar datos
-        de diversas fuentes y prepararlos para análisis posteriores.
-      </p>
-      <ul>
-        <li>
-          <strong>Extracción:</strong> Primero, extraigo los datos de la API de
-          datos abiertos, específicamente de
-          <a
-            href="https://www.datos.gov.co/resource/mcec-87by.json"
-            target="_blank"
-            class="enlace enlace__efecto__3d enlace__subrayado__deslizante"
-            >esta fuente</a
-          >.
-        </li>
-        <li>
-          <strong>Transformación:</strong> Luego, transformo los datos extraídos
-          para asegurarme de que sean consistentes y útiles. Esto puede incluir
-          limpieza de datos, normalización, y la creación de nuevas variables.
-        </li>
-        <li>
-          <strong>Carga:</strong> Finalmente, cargo los datos transformados en
-          un sistema de almacenamiento o en una base de datos para su análisis
-          posterior.
-        </li>
-      </ul>
-    </section>
 
-    <section>
-      <h2>Machine Learning</h2>
-      <p>
-        Una vez que he cargado los datos, utilizo algoritmos de
-        <strong>machine learning</strong> para extraer patrones y hacer
-        predicciones. Este proceso implica:
-      </p>
-      <ul>
-        <li>
-          <strong>Entrenamiento del modelo:</strong> Utilizo los datos
-          históricos para enseñar al modelo a reconocer patrones.
-        </li>
-        <li>
-          <strong>Validación:</strong> Evalúo la precisión del modelo usando un
-          conjunto de datos de prueba.
-        </li>
-        <li>
-          <strong>Predicciones:</strong> Finalmente, utilizo el modelo entrenado
-          para hacer predicciones basadas en nuevos datos.
-        </li>
-      </ul>
+    <section title="Proceso de ETL y Machine Learning">
+      <div class="contenedor__imagen__texto">
+        <img
+          src="Dolar_completo_API.webp"
+          alt="Proceso de ETL y Machine Learning"
+        />
+
+        <p>
+          <strong>¿Qué es ETL?</strong><br />
+          En mi trabajo con datos, utilizo un proceso llamado ETL, que significa
+          Extracción, Transformación y Carga. Este proceso es fundamental para
+          integrar datos de diversas fuentes y prepararlos para análisis
+          posteriores.<br /><br />
+          <strong>Machine Learning:</strong> Una vez que he cargado los datos,
+          utilizo algoritmos de <strong>machine learning</strong> para extraer
+          patrones y hacer predicciones.
+        </p>
+
+        <ul>
+          <h2>Este proceso implica:</h2>
+          <li>
+            <strong>Entrenamiento del modelo:</strong>
+          </li>
+          <li>
+            Utilizo los datos históricos para enseñar al modelo a reconocer
+            patrones.
+          </li>
+          <li>
+            <strong>Validación:</strong>
+          </li>
+          <li>
+            Evalúo la precisión del modelo usando un conjunto de datos de
+            prueba.
+          </li>
+          <li>
+            <strong>Predicciones:</strong>
+          </li>
+          <li>
+            Finalmente, utilizo el modelo entrenado para hacer predicciones
+            basadas en nuevos datos.
+          </li>
+        </ul>
+      </div>
     </section>
 
     <footer>
