--- a/secciones/inicio/inicio.html
+++ b/secciones/inicio/inicio.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="../../estilos/estilo.css" />
 
 <section
-  class="contenedor__flex__columna__around contenedor__padding"
+  class="contenedor__flex__columna__centrado__centrado contenedor__padding"
   id="inicio"
 >
   <div class="nombre">
@@ -15,16 +15,19 @@
 
     <h5><span>A</span>nálisis de <span>D</span>atos <span>A</span>vanzados</h5>
   </div>
-  <div class="animation-container"></div>
-  <a
-    href="../../html/curriculum/curriculum.html"
-    class="botonLink holograma enlace enlace__efecto__3d enlace__subrayado__deslizante"
-    target="_blank"
-    >¡Mi Curriculum!</a
-  >
-  <h6 class="texto maquina__escribir">
-    <span>D</span>oy <span>S</span>oluciones <span>F</span>aciles a
-    <span>P</span>roblemas <span>C</span>omplejos...
-  </h6>
-  <h6 class="texto"><span>A</span>pasionado por la <span>T</span>ecnología</h6>
+  <div class="animation-container">
+    <a
+      href="../../html/curriculum/curriculum.html"
+      class="botonLink holograma enlace enlace__efecto__3d enlace__subrayado__deslizante"
+      target="_blank"
+      >¡Mi Curriculum!</a
+    >
+    <h6 class="texto maquina__escribir">
+      <span>D</span>oy <span>S</span>oluciones <span>F</span>aciles a
+      <span>P</span>roblemas <span>C</span>omplejos...
+    </h6>
+    <h6 class="texto">
+      <span>A</span>pasionado por la <span>T</span>ecnología
+    </h6>
+  </div>
 </section>
