--- a/secciones/habilidades/habilidades.html
+++ b/secciones/habilidades/habilidades.html
@@ -6,7 +6,7 @@
 
 <h2 class="subtitulo"><span>H</span>abilidades</h2>
 <div class="contenedor">
-  <div class="contenedor__grid_2 contenido">
+  <div class="contenedor__grid_2 contenido contenedor__padding">
     <!-- Habilidad 1 -->
 
     <div class="habilidades__contenido gradiente__frio contenedor__padding">
@@ -74,5 +74,33 @@
       star.style.top = `${Math.random() * 100}%`;
       document.body.appendChild(star);
     }
+  </script>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=AW-16752160180"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "AW-16752160180");
+  </script>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=AW-16752160180"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "AW-16752160180");
   </script>
 </div>
