--- a/secciones/contacto/contacto.html
+++ b/secciones/contacto/contacto.html
@@ -147,4 +147,18 @@
         }, 2000);
       });
   </script>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=AW-16752160180"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "AW-16752160180");
+  </script>
 </footer>
